feat: api usage daily
