# api/swagger.json
@@ -140,6 +140,34 @@
                 }
             }
         },
+        "/api/usage/daily": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyJWTAuth": []
+                    }
+                ],
+                "description": "Get client daily request count",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RequestLog"
+                ],
+                "summary": "Get client daily request count",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Hidayathamir_user-activity-tracking-go_internal_delivery_http_response.WebResponse-github_com_Hidayathamir_user-activity-tracking-go_internal_model_ResGetClientDailyRequestCount"
+                        }
+                    }
+                }
+            }
+        },
         "/api/usage/top": {
             "get": {
                 "security": [
@@ -184,6 +212,26 @@
                 },
                 "total_page": {
                     "type": "integer"
+                }
+            }
+        },
+        "github_com_Hidayathamir_user-activity-tracking-go_internal_delivery_http_response.WebResponse-github_com_Hidayathamir_user-activity-tracking-go_internal_model_ResGetClientDailyRequestCount": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_Hidayathamir_user-activity-tracking-go_internal_model.ResGetClientDailyRequestCount"
+                },
+                "error_detail": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "error_message": {
+                    "type": "string"
+                },
+                "paging": {
+                    "$ref": "#/definitions/github_com_Hidayathamir_user-activity-tracking-go_internal_delivery_http_response.PageMetadata"
                 }
             }
         },
@@ -287,6 +335,17 @@
                 }
             }
         },
+        "github_com_Hidayathamir_user-activity-tracking-go_internal_model.DailyCount": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_Hidayathamir_user-activity-tracking-go_internal_model.NameCount": {
             "type": "object",
             "properties": {
@@ -353,6 +412,17 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_Hidayathamir_user-activity-tracking-go_internal_model.ResGetClientDailyRequestCount": {
+            "type": "object",
+            "properties": {
+                "daily_count_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_Hidayathamir_user-activity-tracking-go_internal_model.DailyCount"
+                    }
                 }
             }
         },
